syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.proto";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
}

message User {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string company = 4;
  int32 age = 5;
  string phoneNumber = 6;
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string company = 3;
  int32 age = 4;
  string phoneNumber = 5;
}

message UpdateUserRequest {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string company = 4;
  int32 age = 5;
  string phoneNumber = 6;
}

message DeleteUserRequest {
  string userId = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetAllUsersRequest {
}

message UserResponse {
  User user = 1;
}

message GetAllUsersResponse {
  repeated User users = 1;
}